--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,9 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    display:grid;
+    place-items: center;
 }
+
 
 a {
   color: inherit;
@@ -15,12 +14,13 @@ a {
   box-sizing: border-box;
 }
 
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
     color: white;
-    background: black;
-  }
-}
+    background: rgb(57, 56, 63);
+  } 
+} 
